<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agency</string>

    <string name="activity_main_name">Main Activity</string>
    <string name="activity_main_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_detail_buy">Buy</string>




    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This application is made by Danijela Karaklic</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="pref_edit">pref_edit</string>


    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Products</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_Settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>
    <string name="navigation_re_long">Show all Real Estate</string>
    <string name="dialog_in_name">Name</string>
    <string name="dialog_in_description">Description</string>
    <string name="dialog_in_image">Image</string>
    <string name="dialog_in_adress">Adress</string>
    <string name="dialog_in_telephone">Telephone</string>
    <string name="dialog_in_quadrature">Quadrature</string>
    <string name="dialog_in_room">Room</string>
    <string name="dialog_in_price">Price</string>
    <string name="btn_dialog_in_ok">OK</string>
    <string name="btn_dialog_in_cancel">CANCEL</string>
    <string name="drawer_home_open">Navigation Drawer open</string>
    <string name="drawer_home_close">Navigation Drawer close</string>
    <string name="navigation_drawer_open">Navigation Drawer open</string>
    <string name="navigation_drawer_close">Navigation Drawer close</string>
    <string name="second_menu_edit">Edit</string>
    <string name="second_menu_delete">Delete</string>
    <string name="second_to_schedule">To schedule</string>
    <string name="pref_toast_sum">Allow showing toast messages</string>
    <string name="pref_toast_title">Allow_toast</string>
    <string name="pref_notif_sum">Allow showing notification messages</string>
    <string name="pref_notif_title">Allow notification</string>
    <string name="notif_schedule">You\'ve scheduled sightseing of real estate.</string>
    <string name="notif_schedule_title">To schedule</string>
    <string name="sec_mess_update">You\'ve updated real estate</string>
    <string name="sec_mess_up_title">Update real estate</string>
    <string name="sec_mess_delete">You\'ve deleted real estate</string>
    <string name="sec_mess_del_title">Delete real estate</string>
    <string name="first_mess_add">You\'ve added new real estate</string>
    <string name="first_mess_title">Add a real estate</string>
    <string name="activity_home_name">Real estates</string>
    <string name="second_activity_name">Second Activity</string>
    <string name="nav_all_real_estates">All real estates</string>
    <string name="nav_settings">Settings</string>


</resources>