<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.aleph.android.example21.activities.SecondActivity"
    tools:showIn="@layout/app_bar_home"
    android:orientation="vertical">

<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.aleph.android.example21.activities.SecondActivity"
    tools:showIn="@layout/app_bar_home">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_name"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_description"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_image"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/re_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="fullImage"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_adress"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_telephone"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_quadrature"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_quad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_room"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_price"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_to_schedule"
        android:textAllCaps="true"/>



</LinearLayout>


<!--</android.support.design.widget.CoordinatorLayout>-->

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="rs.aleph.android.example21.activities.SecondActivity"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nesto"/>



    &lt;!&ndash; <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="150dp"
         android:gravity="center"
         android:text="Nesto"
         tools:ignore="MissingConstraints"
       />&ndash;&gt;
</RelativeLayout>-->



<!--
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="rs.aleph.android.example21.activities.SecondActivity"
    tools:showIn="@layout/app_bar_home">







</android.support.constraint.ConstraintLayout>-->

    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->



<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_priprema_detail"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/appbar_padding_top"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/activity_main_toolbar_title"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_scrollFlags="scroll|enterAlways">
    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"/>

    <EditText
        android:id="@+id/actor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Biography"/>

    <EditText
        android:id="@+id/actor_biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Rating"/>

    <RatingBar
        android:id="@+id/acrtor_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"/>

    <EditText
        android:id="@+id/actor_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

<ListView
    android:id="@+id/priprema_actor_movies"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>-->
